# mcpbridge

./: README.md  pyproject.toml
src/mcpbridge/: __init__.py  __main__.py
src/mcpbridge/cli/: __init__.py  cli.py  main.py
src/mcpbridge/cli/commands/: __init__.py  mcpserver.py
src/mcpbridge/client/: __init__.py  result_parser.py  stdio.py
src/mcpbridge/core/: __init__.py  command.py  context.py  conversation.py  llm_executor.py  message_models.py  session.py  tool_executor.py
src/mcpbridge/llm/: __init__.py  base.py  client.py  config.py  exceptions.py
src/mcpbridge/llm/gemini/: __init__.py  client.py  parser.py
src/mcpbridge/llm/openai/: client.py  parser.py
src/mcpbridge/llm/tools/: __init__.py  base.py  gemini.py  openai.py
src/mcpbridge/prompt/: __init__.py  builder.py
src/mcpbridge/prompt/templates/: default.txt
src/mcpbridge/utils/: __init__.py  logging.py
