[project]
name = "mcpbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.0",
    "typer[all]>=0.9.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
mcpbridge = "mcpbridge.cli.main:app"
